--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,39 @@ h1{
 	font-size: 20px;
 	color: white;
 	text-align: center;
-	padding: 40px 0px;
+	padding: 40px 0px 0px 0px;
 }
 
+.contenedor2{
+	max-width: 1600px;
+	margin: auto;
+	padding: 80px 200px;
+	align-content: center;
+}
+
+.portfolio h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	text-transform: uppercase;
+	text-align: center;
+	padding: 20px 0px;
+}
+
+.fotos{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding: 20px;
+}
+
+.fotos article img{
+	display: flex;
+	order: 1,2,3,4,5,6;
+	height: auto;
+	width: auto;
+	max-width: 350px;
+	justify-content: space-between;
+	padding: 10px;
+	box-sizing: border-box;
+}
