--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,91 @@ h1{
 	padding: 10px;
 	box-sizing: border-box;
 }
+
+.contenedor3{
+	max-width: 1600px;
+	margin: auto;
+	padding: 80px 400px;
+	background-color: #7DCFB6;
+	align-content: center;
+	color: white;
+}
+
+.about h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	text-transform: uppercase;
+	text-align: center;
+	align-items: center;
+}
+
+.parrafo{
+	display: flex;
+	flex-direction:row;
+
+}
+
+.parrafo p{
+	display: flex;
+	order: 1,2;
+	flex-direction: column;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	color: white;
+	max-height: 50px;
+	padding: 50px 10px;
+	box-sizing: border-box;
+	line-height: 150%;
+	text-align: inter-word;
+
+}
+
+.descarga{
+	display: flex;
+	justify-content: center;
+	padding-top: 80px;
+}
+
+.down{
+	display: flex;
+	justify-content: center;
+	padding: 10px;
+	align-content: center;
+	background-color: #7DCFB6;
+	width: 200px;
+	height: 20px;
+	border: 1px solid white;
+	border-radius: 5px;
+}
+
+.down a{
+	text-decoration: none;
+	font-style: 5px;
+	font-family: "open-sans", sans-serif;
+	text-align: center;
+	color: white;
+}
+
+.contact{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	text-transform: uppercase;
+	text-align: center;
+	padding: 20px 0px;
+}
+
+input{
+	border: none;
+	border-bottom: 2px solid #BFC0C0;
+}
+
+textarea{
+	border: none;
+	border-bottom: 2px solid #BFC0C0;
+}
+
+label{
+	font-family: "open-sans", sans-serif;
+	font-size: 15px;
+	color: #BFC0C0;
+}
